<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profileFrag_MainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/profileFrag_HeaderLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/primary"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileFrag_userAvatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center|center_vertical"
            android:elevation="6dp"
            android:src="@drawable/snoopdogg"
            app:civ_border_color="@color/dark"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/profileFrag_displayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="bottom|center"
            android:text=""
            android:textColor="@color/light"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/profileFrag_EtdisplayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_borderradius_background"
            android:drawableRight="@drawable/ic_check_primary_24dp"
            android:hint=""
            android:padding="2dp"
            android:textAlignment="center"
            android:textColor="@color/light"
            android:textSize="24sp"
            android:visibility="gone" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingTop="50dp"
        android:paddingEnd="25dp">

        <LinearLayout
            android:id="@+id/profileFrag_CityLayout"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <ImageView
                android:id="@+id/profileFrag_ImgItem1"
                android:layout_width="128dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_location_on_primary_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profileFrag_City"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profileFrag_City"
                    android:textColor="@color/primary" />

                <TextView
                    android:id="@+id/profileFrag_UserCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/dark"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/profileFrag_EtUserCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_borderradius_background"
                    android:drawableRight="@drawable/ic_check_primary_24dp"
                    android:hint="Enter yours City!"
                    android:textColor="@color/dark"
                    android:textSize="24sp"
                    android:visibility="gone" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/profileFrag_EmailLayout"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <ImageView
                android:id="@+id/profileFrag_ImgItem2"
                android:layout_width="128dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_mail_outline_primary_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profileFrag_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profileFrag_Email"
                    android:textColor="@color/primary" />

                <TextView
                    android:id="@+id/profileFrag_UserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/dark"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/profileFrag_EtUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_borderradius_background"
                    android:hint=""
                    android:textColor="@color/dark"
                    android:textSize="24sp"
                    android:visibility="gone" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/profileFrag_DailyDemandCaloriesLayout"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <ImageView
                android:id="@+id/profileFrag_ImgItem3"
                android:layout_width="128dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_hearth_primary_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profileFrag_DailyDemandCalories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profileFrag_CaloriesDailyDemand"
                    android:textColor="@color/primary" />

                <TextView
                    android:id="@+id/profileFrag_UserDailyDemandCalories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark"
                    android:textSize="24sp" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>
